<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".InfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_icon_back"
            android:layout_weight="2"
            android:contentDescription="@string/complete"/>

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/title"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textStyle="bold"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rounded_corners"
        android:paddingStart="16dp"
        android:gravity="center_vertical"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/imgColorCourse"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_icon_circle"
            android:layout_weight="2"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/course"/>

        <TextView
            android:id="@+id/txtCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_weight="8"/>
    </LinearLayout>



    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:textStyle="bold"
        android:layout_weight="1"
        android:paddingStart="16dp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imgPhoto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:src="@drawable/ic_icon_camera"
        android:scaleType="centerInside"
        android:background="@drawable/rounded_corners"/>


    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:paddingStart="16dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="bold"
        android:background="@drawable/rounded_corners"
        android:padding="16dp"
        android:textColor="@color/black"
        android:layout_weight="2"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:paddingLeft="16dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/BtnEdit"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                app:tint="@android:color/holo_blue_dark"
                android:contentDescription="@string/edit"
                app:srcCompat="@drawable/ic_icon_edit" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/holo_blue_dark"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/BtnComplete"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                app:tint="#3FB45D"
                android:contentDescription="@string/complete"
                app:srcCompat="@drawable/ic_icon_complete"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="#3FB45D"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnDelete"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/white"
                android:contentDescription="@string/delete"
                app:tint="@color/red"
                app:srcCompat="@drawable/ic_icon_delete"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textStyle="bold"
                android:textColor="@color/red"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>